# Aspose.Slides-for-C

./: .gitignore  README.md
Docker/: readme.md
Docker/centos/: Dockerfile  readme.md
Docker/ubuntu/: Dockerfile  readme.md
Examples/: Aspose.Slides.Examples.SlidesCPP.VC.VC.opendb  Aspose.Slides.Examples.SlidesCPP.sln  README.md  README.txt
Examples/SlidesCPP/: AccessBuiltinProperties.cpp  AccessChildNodeSpecificPosition.cpp  AccessChildNodes.cpp  AccessLayoutFormats.cpp  AccessModifyingProperties.cpp  AccessOLEObjectFrame.cpp  AccessOpenDoc.cpp  AccessProperties.cpp  AccessSlideComments.cpp  AccessSlidebyID.cpp  AccessSlidebyIndex.cpp  AccessSlides.cpp  AccessSmartArt.cpp  AccessSmartArtParticularLayout.cpp  AccessSmartArtShape.cpp  AccessToGradientStopParameters.cpp  AccessingAltTextinGroupshapes.cpp  AddArrowShapedLine.cpp  AddArrowShapedLineToSlide.cpp  AddAudioFrame.cpp  AddBlobImageToPresentation.cpp  AddBlobToPresentation.cpp  AddBoxAndWhiskerChart.cpp  AddColorToDataPoints.cpp  AddColumnInTexBoxes.cpp  AddColumnsinTextFrame.cpp  AddCustomError.cpp  AddCustomPromptText.cpp  AddDoughnutCallout.cpp  AddEmbeddedFonts.cpp  AddErrorBars.cpp  AddFunnelChart.cpp  AddHistogramChart.cpp  AddHistogramParetoChart.cpp  AddHyperlink.cpp  AddImageFromSVGObject.cpp  AddImageFromSVGObjectFromExternalResource.cpp  AddImageinsideTableCell.cpp  AddLayoutSlides.cpp  AddMathematicalShape.cpp  (+476 more)
Examples/license/: Aspose.Slides.lic  Aspose.Total.lic  Aspose_EndUserLicenseAgreement.html
Examples/templates/: 1.emf  1.emz  2.emf  2.emz  AccessSlides.pptx  AddSlides.pptx  AnimationStopSound-out.pptx  AssistantNode.pptx  Comments1.pptx  GradientBackground.pptx  HelloWorld.pptx  HighlightText.pptx  HighlightTextRegx.pptx  Hyperlinks.pptx  Para Effects.pptx  PasswordPres.pptx  Presentation_BubbleSizeRepresentation.pptx  SampleChart.ppt  SimpleSlideTransitions.pptx  SmartArt.pptx  TestDeck_050.pptx  TestTable.pptx  doc1.pptx  externalWorkbook.xlsx  image.pptx  image1.pptx  modify_pass2.pptx  open_pass1.ppt  parent_comment.pptx  remove_comment.pptx  resultsection1.pptx  sections.pptx  text.pptx  transparency.pptx
Nodejs/: .gitignore  CMakeLists.txt  Readme.md  package.json
Nodejs/cmake/: GuessCompilerPrefix.cmake
Nodejs/src/: AsposeSlidesCppAddon.cpp
Nodejs/tests/: app.js  index.html  package.json  test.js
PHP/: .gitignore  AsposeSlidesCppExtension.cpp  CMakeLists.txt  Readme.md  build_linux_clang.sh  build_windows_x64.bat  setup_php_environment.bat
PHP/tests/: AsposeSlidesCppExtension.ini  AsposeSlidesCppExtension.ini.linux  converter.php  index.html  run_server.bat  run_server.sh  run_test.bat  run_test.sh
Python/: .gitignore  README.md
Python/Python distutils/: PythonApplication.py  README.md  setup.py
Python/Source/: AsposeSlidesCppExtension.cpp
Python/Visual Studio/: PythonApplication.sln  README.md
Python/Visual Studio/AsposeSlidesCppExtension/: AsposeSlidesCppExtension.vcxproj  AsposeSlidesCppExtension.vcxproj.filters  packages.config
Python/Visual Studio/PythonApplication/: PythonApplication.py  PythonApplication.pyproj
QtDemos/: .gitignore  README.md
QtDemos/CMake/: CMakeLists.txt  README.md  aspose_types.natvis  clang_build.sh  windows_build.bat
QtDemos/QtCreator/QtCreatorDebuggingHelpers/: README.md  asposetypes.py
QtDemos/QtCreator/QtWidgets/: QtWidgets.pro  README.md
QtDemos/QtCreator/Qt_AsposeSlides_QMake/: Qt_AsposeSlides_QMake.pro  README.md
QtDemos/Source/QtConsoleApplication/: main.cpp
QtDemos/Source/QtHelpers/: qtcorehelpers.h  qtguihelpers.h
QtDemos/Source/QtWidgets/: main.cpp
QtDemos/Visual Studio/QtWidgets/: QtWidgets.qrc  QtWidgets.sln  QtWidgets.vcxproj  QtWidgets.vcxproj.filters  packages.config
QtDemos/Visual Studio/Qt_AsposeSlides_VS/: Qt_AsposeSlides_VS.sln  Qt_AsposeSlides_VS.vcxproj  Qt_AsposeSlides_VS.vcxproj.filters
Showcases/: .gitignore
Showcases/Pptx2VideoConverter/: CMakeLists.txt  README.md  aspose_types.natvis  build_sample.bat  build_sample.sh  command_line_options.h  main.cpp  pptx2video_converter.cpp  pptx2video_converter.h  run_sample.bat  run_sample.sh
Showcases/Pptx2VideoConverter/sources/: command_line_options.h  main.cpp  pptx2video_converter.cpp
Showcases/Pptx2VideoConverter/templates/: presentation.pptx
Showcases/PresentationExplorer/: CMakeLists.txt  Presentation.pptx  README.md  about_dialog.cpp  about_dialog.h  about_dialog.ui  hidpisupport.cpp  hidpisupport.h  main_window.cpp  main_window.h  main_window.ui  presentation_model.cpp  presentation_model.h  presentation_node_list.cpp  presentation_node_list.h  qtcorehelpers.h  resources.qrc
